datasets/dataset_txt/mitmproxy/mitmproxy_645.txt
JonhSilver commented on 3 Jun 2017
Traceback (most recent call last):
File "pymultitor/examples/on_string/b.py", line 117, in
process = execute_pymultitor()
File "pymultitor/examples/on_string/b.py", line 23, in execute_pymultitor
pymultitor_module = imp.load_source('pymultitor', pymultitor_path)
File "c:\Python27\pymultitor\pymultitor.py", line 19, in
from mitmproxy.proxy import ProxyServer, ProxyConfig
File "c:\Python27\lib\site-packages\mitmproxy\proxy_init_.py", line 4, in <
module>
from .root_context import RootContext
File "c:\Python27\lib\site-packages\mitmproxy\proxy\root_context.py", line 8,
in
from mitmproxy import controller
File "c:\Python27\lib\site-packages\mitmproxy\controller.py", line 9, in
from mitmproxy import addons
File "c:\Python27\lib\site-packages\mitmproxy\addons_init_.py", line 3, in

from mitmproxy.addons import check_alpn
File "c:\Python27\lib\site-packages\mitmproxy\addons\check_alpn.py", line 2, i
n
from mitmproxy.net import tcp
File "c:\Python27\lib\site-packages\mitmproxy\net\tcp.py", line 987
print(u'-' * 40, file=fp)
^
SyntaxError: invalid syntax